packages/isar_plus_generator/test/errors/class/constructor_named.dart
// unnamed constructor

import 'package:isar_plus/isar.dart';

@collection
class Model {
  Model.create();

  Id? id;
}
